--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^12.0.3",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "spotify-web-api-node": "^5.0.2"
   }
 }
